--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
+    "serialize-javascript": "^2.1.2",
     "typed-reducer": "^0.1.1"
   },
   "scripts": {
